# wifinder

./: .gitignore  CMakeLists.txt  README.md  eim_config.toml  partitions_c6.csv  sdkconfig.defaults  sdkconfig.defaults.esp32c6  setup.sh
.github/workflows/: android-unit-tests.yml  desktop-tests.yml  firmware-host-tests.yml  web-core-tests.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts
bw16/: README.md  flash_bw16.sh
bw16/src/: main.cpp
desktop/: requirements.txt  run.py
desktop/espwigle_desktop/: __init__.py  app.py  state.py
desktop/tests/: __init__.py  test_protocol.py  test_state.py  test_wigle_csv.py
desktop/wifinder_desktop/: __init__.py  app.py  protocol.py  wigle_csv.py
downloads/serial-backlog-20260407-034725/: backlog_serial.csv
esp8266/: platformio.ini
esp8266/src/: main.cpp
main/: CMakeLists.txt  Kconfig.projbuild  ble_security_policy.c  ble_security_policy.h  channel_plan.c  channel_plan.h  main.c  scan_policy.c  scan_policy.h  sniffer_logic.c  sniffer_logic.h  wg_gps_nmea.c  wg_gps_nmea.h  wg_payload.c  wg_payload.h  wg_protocol.c  wg_protocol.h  wg_session_transport.c  wg_session_transport.h  wg_storage_backlog.c  wg_storage_backlog.h
scripts/: download_backlog_serial.sh  esp8266_dump_to_wigle.py  run_host_tests.sh
scripts/tests/: test_esp8266_dump_to_wigle.py
tests/: test_ble_security_policy.c  test_channel_plan.c  test_scan_policy.c  test_sniffer_logic.c  test_wg_payload.c  test_wg_protocol.c
tools/wireshark/: espwigle.lua  wifinder.lua
web/: index.html  package-lock.json  package.json  tsconfig.json
(+56 files in other folders)
